--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
   },
   "dependencies": {
     "gatsby": "^3.13.0",
+    "gatsby-plugin-image": "^1.13.0",
+    "gatsby-plugin-sharp": "^3.13.0",
+    "gatsby-source-filesystem": "^3.13.0",
+    "gatsby-transformer-sharp": "^3.13.0",
+    "install": "^0.13.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "prettier": "2.3.2"
