--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby": "^3.13.0",
     "gatsby-plugin-image": "^1.13.0",
     "gatsby-plugin-sharp": "^3.13.0",
+    "gatsby-source-contentful": "^5.13.0",
     "gatsby-source-filesystem": "^3.13.0",
     "gatsby-transformer-sharp": "^3.13.0",
     "install": "^0.13.0",
