[WIP]feat: retrieving background with graphql

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
     "gatsby": "^3.13.0",
+    "gatsby-background-image": "^1.5.3",
     "gatsby-plugin-image": "^1.13.0",
     "gatsby-plugin-sharp": "^3.13.0",
     "gatsby-source-contentful": "^5.13.0",
     "gatsby-source-filesystem": "^3.13.0",
     "gatsby-transformer-sharp": "^3.13.0",
+    "gbimage-bridge": "^0.1.4",
     "install": "^0.13.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.0",
